<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="update">Update</string>
    <string name="status_hint">What\'s going on?</string>
    <string name="preferences">Preferences</string>
    <string name="prefs">Prefs</string>
    <string name="username">Username</string>
    <string name="username_summary">What\'s your Yamba login?</string>
    <string name="password">Password</string>
    <string name="password_summary">What\'s your password?</string>
    <string name="refresh">Refresh</string>
    <string name="purge">Purge</string>

</resources>