<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/group_update" android:visible="true"><item android:id="@+id/item_status" android:showAsAction="always|withText" android:title="@string/update" /></group>
    <item
        android:id="@+id/item_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="always|withText"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/item_prefs"
        android:showAsAction="never"
        android:title="@string/preferences"
        android:titleCondensed="@string/prefs"/>
    <item
        android:id="@+id/item_purge"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/purge" />
    

</menu>